fix importReceipts and pom